--- a/package.json
+++ b/package.json
@@ -11,14 +11,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.0",
+    "@angular/animations": "^11.0.9",
+    "@angular/cdk": "^11.0.3",
     "@angular/common": "~11.0.0",
     "@angular/compiler": "~11.0.0",
     "@angular/core": "~11.0.0",
     "@angular/forms": "~11.0.0",
+    "@angular/material": "^11.0.3",
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@tinymce/tinymce-angular": "^4.2.0",
+    "@types/chart.js": "^2.9.29",
+    "angular-bootstrap-md": "^10.1.1",
+    "animate.css": "^4.1.1",
+    "chart.js": "^2.5.0",
+    "hammerjs": "^2.0.8",
+    "ngx-toastr": "^13.2.0",
+    "ngx-webstorage": "^7.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
