--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "animate.css": "^4.1.1",
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
+    "ngx-pagination": "^5.0.0",
     "ngx-toastr": "^13.2.0",
     "ngx-webstorage": "^7.0.1",
     "rxjs": "~6.6.0",
