--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,5 +18,12 @@ steps:
 - script: |
     npm install -g @angular/cli
     npm install
+    ng init
     ng build --prod
   displayName: 'npm install and build'
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: 'dist'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
+
